frontend/src/components/ChatsPage.css
/* Color Theme */
/* https://coolors.co/25333c-445359-1ab185-158f6c-0f6c52-3a89ce-266cab-df3d3c-c22626-e0e0e0 */
:root {
  --Gunmetal: rgb(37, 51, 60);
  --OuterSpace: rgb(68, 83, 89);
  --Mint: rgb(26, 177, 133);
  --Sea-Green: rgb(21, 143, 108);
  --DarkMint: rgb(15, 108, 82);
  --Tufts-Blue: rgb(58, 137, 206);
  --Azul: rgb(38, 108, 171);
  --Poppy: rgb(223, 61, 60);
  --Fire-Engine-Red: rgb(194, 38, 38);
  --Silver: rgb(204, 204, 204);
}

button {
  transition: 0.35s;
  cursor: pointer;
}

button:hover {
  transition: 0.35s;
}

.tab-link {
  background: none;
  border: none;
  border-radius: 0.25cm;
  padding: 10px;
}

.tab-link:hover {
  background-color: white;
}

.kebab-button {
  border: none;
  background: none;
  border-radius: 50%;
}

.kebab-button:hover {
  background-color: white;
}

.kebab-button-chat {
  border: none;
  border-radius: 50%;
  background: none;
  margin-left: auto;

  z-index: 100;
}

.kebab-button-chat:hover {
  background-color: var(--Silver);
}

.kebab-options-group {
  position: absolute;
  bottom: -100%;
  right: 0;
  transform: translateX(-50%);

  background-color: var(--Silver);
  border: none;
  border-radius: 0.25cm;

  display: flex;
  flex-direction: column;

  padding: 10px;
  cursor: pointer;
  z-index: 100;

  box-shadow: 3px 3px 5px black;
}

.kebab-option-buttons {
  background-color: white;
  border: 1px solid black;
  margin: 2px;

  border-radius: 0.15cm;
}

.kebab-option-buttons:hover {
  background-color: var(--Silver);
}

.chatpage-container {
  display: flex;
  height: 100vh; /* Full height of the viewport */
  overflow: hidden; /* Prevent content from stretching out of bounds */
}

/* ----- For side bar ----- */

.sidebar-container {
  width: 80px;
  border-right: 5px solid var(--DarkMint);
  background: var(--Mint);
  overflow-y: auto;
  overflow-x: hidden;
  /* background: linear-gradient(to bottom, var(--Mint), var(--DarkMint)); */
}

.sidebar {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.sidebar-button {
  padding: 8px 0;
}

.sidebar-button:last-child {
  margin-top: auto;
  margin-bottom: 25px;
}

.account-button {
  margin-top: auto;
  padding: 0 10px;
}

.sidebar-users-picture {
  border-radius: 50%;
  width: 100%;
}

/* ----- For Contents ----- */

.add-button {
  background-color: var(--Mint);
  border: none;
  border-radius: 0.25cm;
  width: 200px;
  margin: 20px 0 10px 0;
  padding: 1px 10px 1px 10px;
}

.add-button:hover {
  background-color: var(--Sea-Green);
}

.contents-separater {
  width: 80%;
  border: 4px solid var(--Silver);

  border-radius: 1cm;
  margin-top: 10px;
}
.separater-line {
  border: 2px solid grey;
  border-radius: 1cm;
}

#Messages {
  display: flex;
  align-items: center;
  /* justify-content: center; */
  flex-direction: column;
}

.svg-group-chat-button {
  display: flex;
  align-items: center;
  justify-content: center;

  margin: 10px 0;
}

.content-info {
  margin-top: 10px;
  margin-bottom: 10px;
  color: grey;
  display: flex;
  justify-content: center;
}

.svg-group-chat-button > div {
  margin-right: 10px;
}

.chat-container {
  width: 100%;
}

.chat-button {
  max-width: 100%;
  display: flex;
  align-items: center;
  flex-direction: row;

  background-color: white;
  border: none;
  padding: 10px 0;

  cursor: pointer;
}

.chat-button:hover {
  background-color: var(--Silver);
  border-left: 5px solid var(--Azul);
  border-right: 5px solid var(--Azul);
}

.chat-button:click {
  background-color: var(--Tufts-Blue);
}
.add-user-button {
  background-color: var(--Mint);
  border: none;
  border-radius: 1cm;

  margin-left: auto;
  padding: 10px 20px;
  margin-right: 10px;
}
.start-chat-button-tempate {
  background-color: grey;
  border: none;
  border-radius: 1cm;

  margin-left: auto;
  padding: 10px 20px;
  margin-right: 10px;

  width: 100px;
  height: 30px;
}

.add-user-button:hover {
  background-color: var(--Sea-Green);
}

/* displays the Messages contents at default */
.tabcontent:not(#Messages) {
  display: none;
}

.tabcontent {
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.contents-users-picture {
  width: 50%;
  border-radius: 50%;
  margin-bottom: 50px;
  /* border-bottom: 1px solid grey; */
}

.picture-chat {
  border-radius: 50%;
  padding: 0 15px 0 10px;
}
.picture-tempate {
  border-radius: 50%;
  padding: 0 10px 0 15px;
  background: grey;
}

.name-template {
  width: 100%;
  height: 40px;
  background-color: grey;
  border-radius: 0.25cm;
}

.kebab-chat-container {
  margin-left: auto;
  margin-right: 10px;
}

.create-group-chat-box {
  /* height: 500px; */
  border: 1px solid black;
  display: flex;
  align-items: center;

  flex-direction: column;

  padding: 15px;
}

.create-group-header {
  padding-bottom: 15px;
}

.chatbox {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.chatbox-message-space {
  margin: 10px;
  margin-bottom: 0;
  display: flex;
  flex-direction: column;
  flex-grow: 1; /* Takes up all available space */
}

.chatbox-name {
  display: flex;
  align-items: center;
  justify-content: center;
}

.messages-container {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: end;
  position: relative;
  background-color: var(--Silver);

  border-radius: 0.25cm;
}

.messages {
  margin: 15px;
  margin-bottom: 0;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.user,
.sender {
  max-width: 75%;
}
.user {
  align-self: flex-end;
}

.sender {
  align-self: flex-start;
}

.user-bubble-message,
.sender-bubble-message {
  border-radius: 0.25cm;
  padding: 10px;
  margin: 0;
}
.user-bubble-message {
  background-color: var(--Tufts-Blue);
}
.sender-bubble-message {
  background-color: white;
}
.sender-name {
  color: white;
  margin-left: 8px;
}
.message {
  font-size: 15px;
}
.timestamp {
  font-size: 11px;
}

.user-bubble-message .timestamp {
  display: flex;
  justify-content: flex-end;
  color: white;
}
.sender-bubble-message .timestamp {
  display: flex;
  justify-content: flex-start;
  color: gray;
}

.user-bubble-message .message {
  display: flex;
  justify-content: flex-start;
}
.sender-bubble-message .message {
  display: flex;
  justify-content: flex-end;
}

.message-input-container {
  position: sticky;
  bottom: 0;
  padding: 8px 5px;
  padding-top: 0;
  border-radius: 0.25cm;
  background-color: var(--Silver);
}

.message-input-divider {
  border: 1px solid var(--OuterSpace);
  border-radius: 1cm;
  margin: 5px 0;
}

.message-input-container input {
  width: 100%;
  padding: 8px;
  border: 1px solid #ccc;
  border-radius: 0.2cm;
  box-sizing: border-box;
}

.messages-container-chat-not-selected {
  flex: 1;

  margin: 10px;
  background-color: var(--Silver);
  border-radius: 0.25cm;

  display: flex;
  align-items: center;
  justify-content: center;
}

.circle {
  height: 150px;
  width: 150px;
  border-radius: 50%;

  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;

  flex-direction: column-reverse;

  background-color: white;
}

.group-chat-input-file {
  margin-bottom: 10px;
}

.group-chat-group {
  display: flex;
  width: 100%;
  align-items: center;
  gap: 10px;
  padding-bottom: 10px;
  flex-wrap: wrap; /* Allows wrapping when necessary */
}

.group-chat-input {
  flex: 1;
  min-width: 200px;
  max-width: 100%;
}

.set-group-chat-name-button {
  border: none;
  border-radius: 0.25cm;
  width: 50px;
  background: var(--Mint);
}

.set-group-chat-name-button:hover {
  background: var(--Sea-Green);
}

.added-users-container {
  width: 100%;
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
}

.added-users-to-group-chat-bubble {
  display: flex;
  font-size: 12px;
  color: white;
  background: var(--Gunmetal);
  border: none;
  border-radius: 0.25cm;
  padding: 3px 5px 4px 5px;
  margin: 1px 2px;
}

.remove-user-from-group-chat {
  border: none;
  background: none;
  color: var(--Poppy);
  padding: 0;
  margin-left: 5px;
  margin-top: 2px;
}

.create-group-chat-button {
  width: 80%;
  height: 35px;
  margin-top: 10px;
  border: none;
  border-radius: 0.25cm;
  background: var(--Mint);
}

.create-group-chat-button:hover {
  background: var(--Sea-Green);
}

.contents-container {
  width: 350px;
  display: flex;
  flex-direction: column;
  /* border: 1px solid black; */
  /* background-color: blue; */
  overflow: hidden; /* Prevent stretching */
}

.contents-bar {
  height: 34px;
  padding-left: 10px;
  padding-right: 10px;
  /* border-right: 2.5px solid var(--DarkMint); */
  background-color: var(--Mint);
  display: flex;
  align-items: center; /* Center the text vertically */
  /* justify-content: space-evenly; */
  /* padding: 0 10px; */
}

.input-search {
  width: 100%;
  margin-left: 10px;
  padding: 3px 0 3px 10px;
  background: none;
  border: 1px solid black;
  border-radius: 1cm;
}

.search-button {
  background: white;
  border: none;
  border-radius: 0.25cm;
  margin-left: 5px;
  padding: 4px 15px 4px 15px;
}

.search-button:hover {
  background-color: var(--Silver);
}

.contents-of-sidebar {
  display: flex;
  align-items: center;
  flex-direction: column;

  /* padding: 15px; */
  flex: 1; /* Take up the remaining height */
  overflow-y: auto; /* Enable scrolling for overflowing content */
  overflow-x: hidden; /* Enable scrolling for overflowing content */
  background-color: white;
  /* padding: 10px; */
}

.chatbox-container {
  flex: 1; /* Take up all remaining horizontal space */
  display: flex;
  flex-direction: column;
  /* border: 1px solid black; */
  overflow: hidden; /* Prevent stretching */
}

.chatbox-bar {
  height: 34px;
  /* border-left: 2.5px solid var(--DarkMint); */
  background-color: var(--Mint);
  display: flex;
  align-items: center;
  /* padding: 0 10px; */
}

.chatbox-content {
  background: white;
  flex: 1; /* Take up remaining vertical space */
  overflow-y: auto; /* Enable scrolling for the chatbox content */
  overflow-x: hidden; /* Enable scrolling for the chatbox content */
  /* padding: 10px; */
}

